# mwr_raw2l1

./: .flake8  .gitignore  .readthedocs.yaml  AUTHORS  LICENSE  README.md  pyproject.toml  pyproject_py368.toml
.github/workflows/: CI_tests UKMO.yaml  CI_tests.yaml  CL_test_UKMO.yml  CL_test_metoffice.yaml  metoffice_tests.yml
docs/: api.rst  conf.py  index.rst  installation.rst  mwr_raw2l1.readers.rst  mwr_raw2l1.rst
docs/_build/doctrees/: api.doctree  index.doctree  installation.doctree  modules.doctree  mwr_raw2l1.doctree  mwr_raw2l1.measurement.doctree  mwr_raw2l1.readers.doctree  mwr_raw2l1.utils.doctree
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  installation.html  modules.html  mwr_raw2l1.html  mwr_raw2l1.measurement.html  mwr_raw2l1.readers.html  mwr_raw2l1.utils.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/api/: config_files.rst  errors.rst  logs.rst  main.rst  measurement.rst  readers.rst  utils.rst  write_netcdf.rst
documents/: instrument_requirements.txt
documents/ATTEX_files/: explanation_MTP5_format_Max_Ferrario.txt
documents/E_PROFILE_format/: E-PROFILE_L1C01_contents_source.csv  E-PROFILE_MWR_NetCDF_L1_data_format_mwr_v01.9.docx  changes_requested_for_L1_format.txt
documents/RPG_files/MWRPRO_filreaders/: get_hkd.pro
documents/python_at_hub/: python_version_myles_explanation.txt
mwr_raw2l1/: L1_format.yaml  __init__.py  __main__.py  config.py  errors.py  legacy_reader_rpg.py  log.py  main.py  measurement.py  measurement_helpers.py  reader_rpg.py  reader_rpg_helpers.py  write_netcdf.py
mwr_raw2l1/config/: L1_format.yaml  config_0-20000-0-06610_A.yaml  config_0-20000-0-06620_A.yaml  config_0-20000-0-10393.yaml  config_0-20000-0-10393_A.yaml  config_0-20000-0-99999_A.yaml  config_0-20008-0-IZO_A.yaml  log_config.yaml  qc_config.yaml
mwr_raw2l1/data/radiometrics/: 2021-01-31_00-04-08_tip.csv
mwr_raw2l1/data/rpg/: C00-V859_190803.CBH  C00-V859_190803.MET  C00-V859_190804.BLB  C00-V859_190804.HKD
mwr_raw2l1/devdoc/: config.py  factory.py  leosphere_wls7_10min.py  questions_volker.txt  reader_rpg.py
mwr_raw2l1/doc/: daily_data_volume.csv  instrument_requirements.txt
mwr_raw2l1/doc/E_PROFILE_format/: E-PROFILE_L1C01_contents_source.csv  changes_requested_for_L1_format.txt  global_atts.yaml
mwr_raw2l1/doc/python_at_hub/: python-venv.txt
mwr_raw2l1/logs/: README
mwr_raw2l1/measurement/: __init__.py  measurement.py  measurement_construct_helpers.py  measurement_constructors.py  measurement_helpers.py  measurement_qc_helpers.py  radiometrics_helpers.py  rpg_helpers.py  scan_transform.py
mwr_raw2l1/questions/: questions_volker.txt
mwr_raw2l1/readers/: __init__.py  base_reader_rpg.py  legacy_reader_rpg.py  reader_attex.py  reader_helpers.py  reader_radiometrics.py  reader_radiometrics_helpers.py  reader_rpg.py  reader_rpg_base.py  reader_rpg_helpers.py
mwr_raw2l1/testdata/rpg/: C00-V859_190803.CMP.TPC  C00-V859_190803.LWP  C00-V859_190803.TPB  C00-V859_190804.BLH  C00-V859_190804.STA  C00-V859_190804.TPC  mytestfile.nc  (+1 more)
mwr_raw2l1/tests/: test_reader_rpg.py  test_reader_rpg_helpers.py
mwr_raw2l1/utils/: config_utils.py  file_utils.py  num_utils.py  transformations.py
questions/: questions_bernhard.txt  questions_christine.txt  questions_harald.txt  questions_volker.txt
raw2l1/: L1_format.yaml  errors.py  legacy_reader_rpg.py  reader_rpg.py  reader_rpg_helpers.py  write_netcdf.py
raw2l1/devdoc/: README  errors.py  leosphere_wls7_10min.py  reader_rpg.py
raw2l1/testdata/: C00-V859_190804.MET
tests/: helper_functions.py  test_attex.py  test_radiometrics.py  test_reader_rpg.py  test_rpg.py
tests/config/: README
utils/: dependencies_py368.toml  pyproject_to_pyver.py
(+115 files in other folders)
