# when editing this file, please make sure to run utils/pyproject_to_pyver.py afterwards

[tool.poetry]
name = "mwr_raw2l1"
version = "1.0.0"
description = "Readers for the most prominent types of operational ground-based K- and V-band microwave radiometers and a writer for NetCDF files according to E-PROFILE/ACTRIS standards."
authors = ["Rolf Rüfenacht <rruefenacht@users.noreply.github.com>"]
license = "BSD 3-Clause"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"  # for scipy
netCDF4 = "^1.5.8"
PyYAML = "^6"
numpy = "^1.21"
scipy = "^1.7.3"
xarray = "^0.20.2"
ephem = "^4.1"  # used for setting sun-in-beam flag in quality_flag
colorlog = {version = "^6.6", optional = true}
Sphinx = {version = "^5.0.2", optional = true}
sphinx-rtd-theme = {version = "^1.0.0", optional = true}
sphinxcontrib-napoleon = {version = "^0.7", optional = true}

[tool.poetry.dev-dependencies]
matplotlib = "^3.5.2"
flake8 = "^4.0.1"
isort = "^5.10.1"
toml = "^0.10.2"
PyQt5 = "^5.15.7"  # needed for displaying matplotlib plots in pycharm
coverage = "^6.5.0"

[tool.poetry.extras]
colorlog = ["colorlog"]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-napoleon"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mwr_raw2l1 = "mwr_raw2l1.__main__:main"


[tool.isort]
line_length = 120
