[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mwr_raw2l1"
version = "1.0.1"
description = "Readers for the most prominent types of operational ground-based K- and V-band microwave radiometers and a writer for NetCDF files according to E-PROFILE/ACTRIS standards."
authors = ["Rolf Rüfenacht <rruefenacht@users.noreply.github.com>","Eric Sauvageat <eric.sauvageat@meteoswiss.ch>"]
license = "BSD 3-Clause"

[tool.poetry.dependencies]
python = ">3.6 <3.8"
netCDF4 = "*"
PyYAML = "*"
numpy = "1.*"
scipy = "*"
xarray = "*"
ephem = "*"  # used for setting sun-in-beam flag in quality_flag
colorlog = {version = "^6.6", optional = true}
pandas = "*"
setuptools = "*"

[tool.poetry.dev-dependencies]
matplotlib = "3.*"
flake8 = "*"
isort = "*"
Sphinx = "*"
sphinx-rtd-theme = "*"
sphinxcontrib-napoleon = "*"
toml = "*"

[tool.poetry.scripts]
mwr_raw2l1 = "mwr_raw2l1.__main__:main"

[tool.poetry.extras]
colorlog = [ "colorlog",]